--- a/index.html
+++ b/index.html
@@ -34,10 +34,36 @@
       border-left: 4px solid #ccc;
       font-style: italic;
     }
+    .ascii-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 2rem 0;
+    }
+    .ascii-container pre {
+      font-family: monospace;
+      color: #0f0;
+      background-color: #111;
+      padding: 1rem;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
   <h1>JACKORE999</h1>
+
+  <div class="ascii-container">
+    <pre>
+
+   _            _                   ___   ___   ___           
+  (_) __ _  ___| | _____  _ __ ___ / _ \ / _ \ / _ \  ___ ___ 
+  | |/ _` |/ __| |/ / _ \| '__/ _ \ (_) | (_) | (_) |/ __/ __|
+  | | (_| | (__|   < (_) | | |  __/\__, |\__, |\__, | (_| (__ 
+ _/ |\__,_|\___|_|\_\___/|_|  \___|  /_/   /_/   /_(_)___\___|
+|__/                                                          
+
+    </pre>
+  </div>
 
   <h2>About Me</h2>
   <ul>
@@ -58,7 +84,5 @@
     “Hope is part of the human condition and trans people’s hope is our proof that we are fully human. We are not an ‘issue’ to be debated and derided.”
     <br>— Shon Faye, <em>The Transgender Issue: An Argument for Justice</em> (2022)
   </blockquote>
-
-
 </body>
 </html>
