--- a/index.html
+++ b/index.html
@@ -98,5 +98,23 @@
     “Hope is part of the human condition and trans people’s hope is our proof that we are fully human. We are not an ‘issue’ to be debated and derided.”
     <br>— Shon Faye, <em>The Transgender Issue: An Argument for Justice</em> (2022)
   </blockquote>
+      
+  <div class="ascii-container">
+    <pre>
+  _____                   _      __   __                 
+ / ___/__  ___  __ ______(_)__ _/ /  / /_                
+/ /__/ _ \/ _ \/ // / __/ / _ `/ _ \/ __/                
+\___/\___/ .__/\_, /_/ /_/\_, /_//_/\__/                 
+      _ /_/   /___/      /___/    ___  ___  ___          
+     (_)__ _____/ /_____  _______/ _ \/ _ \/ _ \ ________
+    / / _ `/ __/  '_/ _ \/ __/ -_)_, /\_, /\_, // __/ __/
+ __/ /\_,_/\__/_/\_\\___/_/  \__/___//___//___(_)__/\__/ 
+|___/_  ___  ___  ____                                   
+  |_  |/ _ \|_  |/ __/                                   
+ / __// // / __//__ \                                    
+/____/\___/____/____/                                    
+    </pre>
+  </div>
+
 </body>
 </html>
